--- a/source/template/_layouts/layout.pug
+++ b/source/template/_layouts/layout.pug
@@ -11,16 +11,14 @@ html(class=`${customClass}`)
         meta(content="width=device-width, initial-scale=1" name="viewport")
         meta(content="ie=edge" http-equiv="x-ua-compatible")
 
-        //- favicon block start
-        //- favicon block end
         link(rel="icon" href="/assets/img/fav_night.ico")
         link(rel='stylesheet' href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext")
-        link(rel='stylesheet' href='/assets/font-awesome/css/font-awesome.css')
-        link(rel='stylesheet' href='/assets/css/foundation.css')
-        link(rel='stylesheet' href='/assets/css/main.css')
-        script(src='/assets/js/foundation.js' defer)
-        script(src='/assets/js/app.js' defer)
-        script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOpaCR_qN2qxXI19h-bGuRtVx7dRwh7jY&callback=initMap")
+        link(rel='stylesheet' href='./assets/font-awesome/css/font-awesome.css')
+        link(rel='stylesheet' href='./assets/css/foundation.css')
+        link(rel='stylesheet' href='./assets/css/main.css')
+        script(src='./assets/js/foundation.js')
+        script(src='./assets/js/app.js')
+        script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOpaCR_qN2qxXI19h-bGuRtVx7dRwh7jY")
 
         <!--[if lt IE 9]>
         script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
@@ -30,4 +28,14 @@ html(class=`${customClass}`)
         include ../_chunks/header.pug
         div.main-content
             block content
+        div.menu-overlay-ctn
+            div.menu-overlay
+                div.menu-overlay-content
+                    each link,title in footerNavigation
+                        a.title.title--white.menu-overlay__item(href=`${link}`)=title
+                            div.line-separate.line-separate--white
+
+        div.preload-overlay-ctn
+            div.preload-circle
+            div.preloader-text 0
         include ../_chunks/footer.pug
