--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -5,6 +5,7 @@ block variables
     - var headerSubtitleText = 'Личный сайт веб разработчика'
     - var title = 'Обо мне'
     - var footerClass = 'transparent'
+    - var current = 'About'
 
 block content
     div.skew-ctn
@@ -19,7 +20,7 @@ block content
                     div.block-half-column.block-half-column
                         div.tablet-content-fixer
                             div.photo-simple-ctn.centered
-                                img.photo(src='/assets/img/profile.jpg')
+                                img.photo(src='./assets/img/profile.jpg')
                             div.centered
                                 h2.title.title--second-level Кто я
                                 div.line-separate
