--- a/source/style/layout.scss
+++ b/source/style/layout.scss
@@ -66,35 +66,35 @@
 
 .skew-block--left {
  left: 0;
-  background: linear-gradient(7deg, rgba(30,87,153,1) 0%, gba(32,124,202,1) 50%,transparent 50.1%,transparent 100%)
+  background: linear-gradient(7deg, rgba(30,87,153,1) 0%, gba(32,124,202,1) 50%,transparent 50.5%,transparent 100%)
 }
 
 .skew-block--left-beige {
-  background: linear-gradient(7deg, $beige 0%, $beige 50%,transparent 50.1%,transparent 100%)
+  background: linear-gradient(7deg, $beige 0%, $beige 50%,transparent 50.5%,transparent 100%)
 }
 
 
 .skew-block--left-dark-transparent {
-  background: linear-gradient(7deg, rgba(#0d1120,0.85) 0%, rgba(#0d1120,0.85) 50%,transparent 50.1%,transparent 100%)
+  background: linear-gradient(7deg, rgba(#0d1120,0.85) 0%, rgba(#0d1120,0.85) 50%,transparent 50.5%,transparent 100%)
 }
 
 
 
 .skew-block--right {
   right: 0;
-  background: linear-gradient(-7deg, #eae8e2 0%, #eae8e2 50%,transparent 50.1%,transparent 100%)
+  background: linear-gradient(-7deg, #eae8e2 0%, #eae8e2 50%,transparent 50.5%,transparent 100%)
 }
 
 .skew-block--right-creme {
-  background: linear-gradient(-7deg, $creme 0%, $creme 50%,transparent 50.1%,transparent 100%)
+  background: linear-gradient(-7deg, $creme 0%, $creme 50%,transparent 50.5%,transparent 100%)
 }
 
 .skew-block--right-beige {
-  background: linear-gradient(-7deg, $beige 0%, $beige 50%,transparent 50.1%,transparent 100%)
+  background: linear-gradient(-7deg, $beige 0%, $beige 50%,transparent 50.5%,transparent 100%)
 }
 
 .skew-block--right-dark-transparent {
-  background: linear-gradient(-7deg, rgba(#0d1120,0.85) 0%, rgba(#0d1120,0.85) 50%,transparent 50.1%,transparent 100%)
+  background: linear-gradient(-7deg, rgba(#0d1120,0.85) 0%, rgba(#0d1120,0.85) 50%,transparent 50.5%,transparent 100%)
 }
 
 .skew-ctn--high {
@@ -117,6 +117,49 @@
 }
 
 
+.preload-overlay-ctn {
+  display: block;
+  position: fixed;
+  background: rgba($mainBlue, 0.87);
+  left: 0;
+  right: 0;
+  height: 100vh;
+  top: 0;
+  bottom: 0;
+  overflow: auto;
+  z-index: 200;
+}
+
+.preloader-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100px;
+  margin-left: -50px;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-align: center;
+  line-height: 0;
+}
+
+.preload-circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 120px;
+  height: 120px;
+  border: 2px solid #fff;
+  border-radius: 100%;
+  margin-left: -60px;
+  margin-top: -60px;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+
 @media (max-width: $tabletDimension) {
   .main-content__half-block {
     width: 100%;
@@ -135,7 +178,7 @@
 
 @media (max-width: $tabletDimension) {
   .skew-block--right-beige-tablet {
-    background: linear-gradient(-7deg, $beige 0%, $beige 50%,transparent 50.1%,transparent 100%)
+    background: linear-gradient(-7deg, $beige 0%, $beige 50%,transparent 50.5%,transparent 100%)
   }
 
 
