--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -22,6 +22,7 @@
 @import "components/side-nav";
 @import "components/reviews";
 @import "components/contacts-form";
+@import "components/menu-overlay";
 
 
 //специфические вещи для страниц
