--- a/source/style/pages/blog.scss
+++ b/source/style/pages/blog.scss
@@ -1,6 +1,7 @@
 .blog-content {
   position: relative;
   padding-top: 50px;
+  display: flex;
 
   .blog-content__item:last-of-type {
     margin-bottom: 0;
