--- a/source/template/_chunks/header.pug
+++ b/source/template/_chunks/header.pug
@@ -4,12 +4,13 @@ header.main-header
             include ../_partials/socials.pug
             div.burger-ctn
                 a.burger-trigger.js-burger-trigger(href="#")
-                    i.fa.fa-bars(aria-hidden='true')
+                    i.burger-icon.fa.fa-bars(aria-hidden='true')
+                    div.header-cross ×
     div.parallax
         div.parallax__layer.parallax__layer--back
             div.main-header__details
                 div.rounded-photo
-                    img.rounded-photo__img(src="/assets/img/profile.jpg")
+                    img.rounded-photo__img(src="./assets/img/profile.jpg")
                 if headerTitleLarge
                     h1.title.title--white #{headerTitleLarge}
                 if headerTitleText
