--- a/source/template/_layouts/greet-layout.pug
+++ b/source/template/_layouts/greet-layout.pug
@@ -15,11 +15,11 @@ html(class=`${customClass}`)
         //- favicon block end
         link(rel="icon" href="/assets/img/fav_night.ico")
         link(rel='stylesheet' href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext")
-        link(rel='stylesheet' href='/assets/font-awesome/css/font-awesome.css')
-        link(rel='stylesheet' href='/assets/css/foundation.css')
-        link(rel='stylesheet' href='/assets/css/main.css')
-        script(src='/assets/js/foundation.js' defer)
-        script(src='/assets/js/app.js' defer)
+        link(rel='stylesheet' href='./assets/font-awesome/css/font-awesome.css')
+        link(rel='stylesheet' href='./assets/css/foundation.css')
+        link(rel='stylesheet' href='./assets/css/main.css')
+        script(src='./assets/js/foundation.js' defer)
+        script(src='./assets/js/app.js' defer)
 
         <!--[if lt IE 9]>
         script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
