--- a/source/style/components/footer.scss
+++ b/source/style/components/footer.scss
@@ -161,7 +161,7 @@
     color: $socialBlue;
   }
 
-  .footer-nav__item:hover {
+  .footer-nav__item:hover, .footer-link:hover {
     color: #ababab;
   }
 
